refactor(courseservice): breaking changes

--- a/Frontend/src/features/courses/locales/en/courses.json
+++ b/Frontend/src/features/courses/locales/en/courses.json
@@ -19,8 +19,10 @@
     "buyNow": "Buy Now",
     "addToCart": "Add to Cart",
     "about": "About This Course",
+    "courseContent": "Course Content",
     "lessons": "Lessons",
     "noLessons": "No lessons available.",
+    "noModules": "No modules available.",
     "addLesson": "Add Lesson",
     "edit": "Edit",
     "delete": "Delete Course",
