--- a/Frontend/src/features/courses/locales/he/courses.json
+++ b/Frontend/src/features/courses/locales/he/courses.json
@@ -19,8 +19,10 @@
     "buyNow": "קנה עכשיו",
     "addToCart": "הוסף לסל",
     "about": "על הקורס",
+    "courseContent": "תוכן הקורס",
     "lessons": "שיעורים",
     "noLessons": "אין שיעורים זמינים.",
+    "noModules": "אין פרקים זמינים.",
     "addLesson": "הוסף שיעור",
     "edit": "ערוך",
     "delete": "מחק קורס",
