--- a/Frontend/src/locales/he/translation.json
+++ b/Frontend/src/locales/he/translation.json
@@ -21,6 +21,11 @@
     "previous": "קודם",
     "next": "הבא"
   },
+  "time": {
+    "hour": "ש",
+    "minute": "ד",
+    "second": "ש"
+  },
   "breadcrumbs": {
     "home": "בית",
     "courses": "קורסים",
