feat(courseservice): first working design using CQRS

--- a/Frontend/src/features/courses/locales/en/courses.json
+++ b/Frontend/src/features/courses/locales/en/courses.json
@@ -20,10 +20,13 @@
     "addToCart": "Add to Cart",
     "about": "About This Course",
     "courseContent": "Course Content",
+    "module": "Module",
     "lessons": "Lessons",
     "noLessons": "No lessons available.",
     "noModules": "No modules available.",
+    "addModule": "Add Module",
     "addLesson": "Add Lesson",
+    "createFirstModule": "Create First Module",
     "edit": "Edit",
     "delete": "Delete Course",
     "notFound": "Course not found",
