--- a/Frontend/src/features/courses/locales/he/courses.json
+++ b/Frontend/src/features/courses/locales/he/courses.json
@@ -20,10 +20,13 @@
     "addToCart": "הוסף לסל",
     "about": "על הקורס",
     "courseContent": "תוכן הקורס",
+    "module": "פרק",
     "lessons": "שיעורים",
     "noLessons": "אין שיעורים זמינים.",
     "noModules": "אין פרקים זמינים.",
+    "addModule": "הוסף פרק",
     "addLesson": "הוסף שיעור",
+    "createFirstModule": "צור פרק ראשון",
     "edit": "ערוך",
     "delete": "מחק קורס",
     "notFound": "קורס לא נמצא",
