feat(frontend): added more data in course page

--- a/Frontend/src/features/courses/locales/en/courses.json
+++ b/Frontend/src/features/courses/locales/en/courses.json
@@ -18,10 +18,16 @@
     "instructor": "Instructor",
     "buyNow": "Buy Now",
     "addToCart": "Add to Cart",
+    "free": "Free",
     "about": "About This Course",
     "courseContent": "Course Content",
-    "module": "Module",
+    "courseInfo": "Course Information",
+    "enrolled": "Students Enrolled",
     "lessons": "Lessons",
+    "duration": "Total Duration",
+    "category": "Category",
+    "tags": "Tags",
+    "module": "Module",
     "noLessons": "No lessons available.",
     "noModules": "No modules available.",
     "addModule": "Add Module",
