--- a/Frontend/src/features/courses/locales/he/courses.json
+++ b/Frontend/src/features/courses/locales/he/courses.json
@@ -18,10 +18,16 @@
     "instructor": "מדריך",
     "buyNow": "קנה עכשיו",
     "addToCart": "הוסף לסל",
+    "free": "חינם",
     "about": "על הקורס",
     "courseContent": "תוכן הקורס",
-    "module": "פרק",
+    "courseInfo": "מידע על הקורס",
+    "enrolled": "תלמידים רשומים",
     "lessons": "שיעורים",
+    "duration": "משך כולל",
+    "category": "קטגוריה",
+    "tags": "תגיות",
+    "module": "פרק",
     "noLessons": "אין שיעורים זמינים.",
     "noModules": "אין פרקים זמינים.",
     "addModule": "הוסף פרק",
