feat(frontend): added generate lesson with ai

--- a/Frontend/src/features/lessons/locales/en/lessons.json
+++ b/Frontend/src/features/lessons/locales/en/lessons.json
@@ -39,7 +39,12 @@
     "deleteSuccess": "Lesson deleted successfully",
     "deleteFailed": "Failed to delete lesson",
     "deleteConfirmTitle": "Delete Lesson",
-    "deleteConfirmMessage": "Are you sure you want to delete this lesson? This action cannot be undone."
+    "deleteConfirmMessage": "Are you sure you want to delete this lesson? This action cannot be undone.",
+    "generateWithAi": "Generate with AI",
+    "generatingWithAi": "Generating...",
+    "aiGenerateSuccess": "AI suggestions applied! Review and save your changes.",
+    "aiGenerateFailed": "Failed to generate content with AI",
+    "aiGenerateNoTranscript": "Cannot generate content: No transcript available for this lesson"
   },
   "pages": {
     "lesson": {
