feat(frtonend): added ratings support

--- a/Frontend/src/features/course-management/locales/en.json
+++ b/Frontend/src/features/course-management/locales/en.json
@@ -38,6 +38,29 @@
     "deleteConfirmTitle": "Delete Course",
     "deleteConfirmMessage": "Are you sure you want to delete this course? This action cannot be undone."
   },
+  "ratings": {
+    "sectionTitle": "Reviews & Ratings",
+    "addRating": "Add your rating",
+    "noRatings": "No ratings yet. Be the first to review!",
+    "submit": "Submit Rating",
+    "submitting": "Submitting...",
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteConfirmTitle": "Delete Rating",
+    "deleteConfirmMessage": "Are you sure you want to delete your rating? This cannot be undone.",
+    "editDialog": {
+      "title": "Edit Rating",
+      "description": "Update your rating and comment.",
+      "saving": "Saving..."
+    },
+    "scoreLabel": "Your rating",
+    "commentLabel": "Comment",
+    "commentPlaceholder": "Share your experience with this course...",
+    "createSuccess": "Thank you for your rating!",
+    "updateSuccess": "Rating updated successfully",
+    "deleteSuccess": "Rating deleted successfully",
+    "error": "Something went wrong: {{message}}"
+  },
   "addDialog": {
     "validationError": "Please fill in all required fields",
     "successMessage": "Course created successfully",
