feat(frontend): added course view rendering

--- a/Frontend/src/features/course-management/locales/en.json
+++ b/Frontend/src/features/course-management/locales/en.json
@@ -11,6 +11,7 @@
     "enrolled": "Enrolled",
     "lessons": "Lessons",
     "duration": "Duration",
+    "views": "Views",
     "free": "Free",
     "buyNow": "Buy Now",
     "addToCart": "Add to Cart",
