--- a/Frontend/src/features/course-management/locales/he.json
+++ b/Frontend/src/features/course-management/locales/he.json
@@ -11,6 +11,7 @@
     "enrolled": "נרשמו",
     "lessons": "שיעורים",
     "duration": "משך",
+    "views": "צפיות",
     "free": "חינם",
     "buyNow": "קנה עכשיו",
     "addToCart": "הוסף לעגלה",
