feat(courseservice): added change price flow

--- a/Frontend/src/features/course-management/locales/en.json
+++ b/Frontend/src/features/course-management/locales/en.json
@@ -3,6 +3,12 @@
     "descriptionUpdated": "Description updated successfully",
     "titleUpdated": "Title updated successfully",
     "titleUpdateFailed": "Failed to update title",
+    "descriptionUpdateFailed": "Failed to update description",
+    "priceUpdated": "Price updated successfully",
+    "priceUpdateFailed": "Failed to update price",
+    "priceInvalid": "Please enter a valid amount (≥ 0) and currency",
+    "editPrice": "Edit price",
+    "priceOnlyWhenUnpublished": "Price can only be changed when the course is unpublished",
     "notFound": "Course not found",
     "about": "About",
     "enterDescription": "Enter course description",
