--- a/Frontend/src/features/course-management/locales/he.json
+++ b/Frontend/src/features/course-management/locales/he.json
@@ -3,6 +3,12 @@
     "descriptionUpdated": "התיאור עודכן בהצלחה",
     "titleUpdated": "הכותרת עודכנה בהצלחה",
     "titleUpdateFailed": "עדכון הכותרת נכשל",
+    "descriptionUpdateFailed": "עדכון התיאור נכשל",
+    "priceUpdated": "המחיר עודכן בהצלחה",
+    "priceUpdateFailed": "עדכון המחיר נכשל",
+    "priceInvalid": "הזן סכום תקין (≥ 0) ומטבע",
+    "editPrice": "ערוך מחיר",
+    "priceOnlyWhenUnpublished": "לא ניתן לשנות מחיר כאשר הקורס פורסם",
     "notFound": "הקורס לא נמצא",
     "about": "אודות",
     "enterDescription": "הזן תיאור קורס",
