feat(frontend): added change category support

--- a/Frontend/src/features/course-management/locales/en.json
+++ b/Frontend/src/features/course-management/locales/en.json
@@ -24,6 +24,10 @@
     "delete": "Delete",
     "courseInfo": "Course Info",
     "category": "Category",
+    "categoryUpdated": "Category updated successfully",
+    "categoryUpdateFailed": "Failed to update category",
+    "selectCategory": "Select category",
+    "noCategoriesAvailable": "No categories available",
     "tags": "Tags",
     "invalidFileType": "Invalid file type",
     "uploadSuccess": "Image uploaded successfully",
