--- a/Frontend/src/features/course-management/locales/he.json
+++ b/Frontend/src/features/course-management/locales/he.json
@@ -24,6 +24,10 @@
     "delete": "מחק",
     "courseInfo": "מידע על הקורס",
     "category": "קטגוריה",
+    "categoryUpdated": "הקטגוריה עודכנה בהצלחה",
+    "categoryUpdateFailed": "עדכון הקטגוריה נכשל",
+    "selectCategory": "בחר קטגוריה",
+    "noCategoriesAvailable": "אין קטגוריות זמינות",
     "tags": "תגיות",
     "invalidFileType": "סוג קובץ לא תקין",
     "uploadSuccess": "התמונה הועלתה בהצלחה",
