--- a/Frontend/src/features/lesson-viewer/locales/he.json
+++ b/Frontend/src/features/lesson-viewer/locales/he.json
@@ -1,48 +1,1 @@
-{
-  "actions": {
-    "titleUpdated": "הכותרת עודכנה בהצלחה",
-    "titleUpdateFailed": "עדכון הכותרת נכשל",
-    "descriptionUpdated": "התיאור עודכן בהצלחה",
-    "descriptionUpdateFailed": "עדכון התיאור נכשל",
-    "aiGenerateSuccess": "התמליל נוצר בהצלחה",
-    "aiGenerateNoTranscript": "לא ניתן היה ליצור תמליל",
-    "aiGenerateFailed": "יצירת התמליל נכשלה",
-    "generatingWithAi": "מייצר עם AI...",
-    "generateWithAi": "צור עם AI",
-    "enterTitle": "הזן כותרת שיעור",
-    "enterDescription": "הזן תיאור שיעור",
-    "noDescription": "אין תיאור",
-    "deleteConfirmTitle": "מחיקת שיעור",
-    "deleteConfirmMessage": "האם אתה בטוח שברצונך למחוק שיעור זה? לא ניתן לבטל פעולה זו."
-  },
-  "pages": {
-    "lesson": {
-      "noVideo": "אין וידאו זמין",
-      "description": "תיאור"
-    }
-  },
-  "card": {
-    "preview": "תצוגה מקדימה"
-  },
-  "addDialog": {
-    "validationError": "נא למלא את כל השדות הנדרשים",
-    "errorMessage": "יצירת השיעור נכשלה: {{message}}",
-    "successMessage": "השיעור נוצר בהצלחה",
-    "title": "הוסף שיעור",
-    "description": "צור שיעור חדש למודול זה.",
-    "titleLabel": "כותרת השיעור",
-    "titlePlaceholder": "הזן כותרת שיעור",
-    "descriptionLabel": "תיאור",
-    "descriptionPlaceholder": "הזן תיאור שיעור",
-    "cancel": "ביטול",
-    "submitting": "יוצר...",
-    "submit": "צור שיעור"
-  },
-  "detail": {
-    "invalidVideoType": "סוג קובץ וידאו לא תקין",
-    "videoUploadSuccess": "הווידאו הועלה בהצלחה",
-    "videoUploadFailed": "העלאת הווידאו נכשלה",
-    "uploadingVideo": "מעלה וידאו...",
-    "uploadVideo": "העלה וידאו"
-  }
-}
+{"actions":{"titleUpdated":"הכותרת עודכנה בהצלחה","titleUpdateFailed":"עדכון הכותרת נכשל","descriptionUpdated":"התיאור עודכן בהצלחה","descriptionUpdateFailed":"עדכון התיאור נכשל","aiGenerateSuccess":"התמליל נוצר בהצלחה","aiGenerateNoTranscript":"לא ניתן היה ליצור תמליל","aiGenerateFailed":"יצירת התמליל נכשלה","generatingWithAi":"מייצר עם AI...","generateWithAi":"צור עם AI","enterTitle":"הזן כותרת שיעור","enterDescription":"הזן תיאור שיעור","noDescription":"אין תיאור","deleteConfirmTitle":"מחיקת שיעור","deleteConfirmMessage":"האם אתה בטוח שברצונך למחוק שיעור זה? לא ניתן לבטל פעולה זו."},"pages":{"lesson":{"noVideo":"אין וידאו זמין","description":"תיאור"}},"card":{"preview":"תצוגה מקדימה","loginToAccess":"התחבר כדי לגשת","manage":"פתח","view":"צפה","purchaseToAccess":"רכוש כדי לגשת","dragHandle":"גרור לסידור מחדש"},"addDialog":{"validationError":"נא למלא את כל השדות הנדרשים","errorMessage":"יצירת השיעור נכשלה: {{message}}","successMessage":"השיעור נוצר בהצלחה","title":"הוסף שיעור","description":"צור שיעור חדש למודול זה.","titleLabel":"כותרת השיעור","titlePlaceholder":"הזן כותרת שיעור","descriptionLabel":"תיאור","descriptionPlaceholder":"הזן תיאור שיעור","cancel":"ביטול","submitting":"יוצר...","submit":"צור שיעור"},"detail":{"invalidVideoType":"סוג קובץ וידאו לא תקין","videoUploadSuccess":"הווידאו הועלה בהצלחה","videoUploadFailed":"העלאת הווידאו נכשלה","uploadingVideo":"מעלה וידאו...","uploadVideo":"העלה וידאו"},"accessLevel":{"label":"רמת גישה לשיעור","freePreview":"תצוגה מקדימה חינם","private":"לנרשמים בלבד","changeSuccess":"רמת הגישה עודכנה בהצלחה","changeFailed":"עדכון רמת הגישה נכשל"}}
