refactor(frontend): improved UI for lesson and course page

--- a/Frontend/src/features/lesson-viewer/locales/en.json
+++ b/Frontend/src/features/lesson-viewer/locales/en.json
@@ -33,6 +33,8 @@
     "aiGenerateFailed": "Failed to generate transcript",
     "generatingWithAi": "Generating with AI...",
     "generateWithAi": "Generate with AI",
+    "aiContentGenerator": "AI Content Generator",
+    "aiGenerateHint": "Generate title and description from transcript",
     "enterTitle": "Enter lesson title",
     "enterDescription": "Enter lesson description",
     "noDescription": "No description",
